[package]
name = "guessgame"
description = "Guessing game in Rust language tutorial"
authors = ["asap0208@gmail.com"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
